@@ -25,6 +25,9 @@ bzr-svn 0.5.4					UNRELEASED
    * Keywords and end of line properties in svn working copies are now honored. 
      (#81463)
 
+   * Support override_svn_revprops = svn:author=author to allow svn:author to be 
+     set to the author of a pushed revision rather than the committer. (#342979)
+
 
 bzr-svn 0.5.3                   2009-03-10
 
